--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -14,3 +14,16 @@ jobs:
           node-version: '20.x'
       - run: npm install
       - run: npm run build
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4.2.2
+      - name: use node.js
+        uses: actions/setup-node@v3.9.1
+        with:
+          node-version: '20.x'
+      - run: npm install
+      - run: npm test
+      
