--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -14,6 +14,7 @@ jobs:
           node-version: '20.x'
       - run: npm install
       - run: npm run build
+      
   test:
     needs: build
     runs-on: ubuntu-latest
@@ -27,3 +28,36 @@ jobs:
       - run: npm install
       - run: npm test
       
+  deploy:
+    needs: test
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    environment:
+      name: Production
+      url: ${{ steps.deployment.output.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4.2.2
+        with: 
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: use node.js
+        uses: actions/setup-node@4
+        with: 
+          node-version: '20.x'
+      - name: configure github pages
+        uses: actions/configure-pages@4
+        with:
+          static_site_generator: next
+      - run: npm install
+      - run: npm build
+      - name: upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          path: './out'
+      - name: deploy
+        id: deployment
+        uses: actions/deploy-pages@v4
+    
