--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -56,6 +56,7 @@ jobs:
       - name: upload artifacts
         uses: actions/upload-artifact@v4.6.2
         with:
+          name: artifact.zip
           path: './out'
       - name: deploy
         id: deployment
